Improve identifier implementation and fix security vulnerabilities